[package]
name = "raymarching"
authors = ["Mark Zander <mark.of.zander@icloud.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18.0"
clap = { version = "4.1.13", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
multiarray = "0.1.3"
pollster = "0.3.0"
wgpu = "0.16.1"
winit = "0.28.3"
